--- a/文本分类.md
+++ b/文本分类.md
@@ -62,7 +62,7 @@ sign为符号函数，取判别函数f(z)的正负号，为方便，简写判别
 $$
 f(z) ＝ \theta^Tz+\theta_0 = \sum_{i=1}^{k}\theta_iz_i + \theta_0 = \sum_{i=0}^{k} = \hat \theta^T \hat z
 $$
-其中$z_0=1$,$\hat\theta,\hat z$分别称为增广权重向量和增光特征向量。
+其中$z_0=1$,$\hat\theta,\hat z$分别称为增广权重向量和增广特征向量。
 $$
 \hat z = \left( 
 		\begin{array} {ccc} 1 \\  z_1\\ .\\ .\\  z_k
@@ -89,7 +89,7 @@ $$
 
 #### 3.2 多分类问题
 
-​	对于 C 类分类问题,需要定义 C 个判别函数。但是这种表示一般适用于类别 y 为离散变量的情况。在自然语言处理的很 多学习任务,类别 y 可以是更复杂的结构,比如多标签、层次化以及结构化等形式。为了更好的描述这些情况，可采用如下形式：
+​	对于 C 类分类问题,需要定义 C 个判别函数。但是这种表示一般适用于类别 y 为离散变量的情况。在自然语言处理的很多学习任务,类别 y 可以是更复杂的结构,比如多标签、层次化以及结构化等形式。为了更好的描述这些情况，可采用如下形式：
 $$
 \hat y = \mathop{argmax}_yf(\phi(x,y),\theta)  \hspace{5cm} 式3.2
 $$
@@ -211,7 +211,7 @@ $θ_0=0;$
 $k=1;$
 $for\ t=1···T\ do$
 
-​	$shuffle​$
+​	$shuffle$
 
 ​	$for\ i = 1 · · · N\ do$
 
@@ -248,7 +248,7 @@ $return\  θ_T ;$
 
 ##### 5.2.2 定理
 
-对于任何线性可分的训练集$D = {(x_i,y_i)}_{i=1}^{n}​$,假设 R 是所有样本中错误类别和真实类别在特征空间 φ(x, y) 最远的距离。
+对于任何线性可分的训练集$D = {(x_i,y_i)}_{i=1}^{n}$,假设 R 是所有样本中错误类别和真实类别在特征空间 φ(x, y) 最远的距离。
 
 $R =\mathop {max}_imax_{z\ne y_i}∥φ(x_i,y_i)−φ(x_i,z)∥$
 
